<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.ahmedmakramallah.inventoryapp.NewProductActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CategoryStyle"
        android:layout_gravity="center"
        android:text="@string/product_name_txt" />

    <EditText
        android:id="@+id/name_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CategoryStyle"
        android:layout_gravity="center"
        android:text="@string/quantity_txt" />

    <EditText
        android:id="@+id/quantity_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CategoryStyle"
        android:layout_gravity="center"
        android:text="@string/price_txt" />

    <EditText
        android:id="@+id/price_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CategoryStyle"
        android:layout_gravity="center"
        android:text="@string/supplier_number_txt" />

    <EditText
        android:id="@+id/number_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <Button
        android:id="@+id/select_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_photo" />

    <Button
        android:id="@+id/add_new_product_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done_btn" />
</LinearLayout>
