<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/CategoryStyle"
            android:text="@string/product_name_txt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/CategoryStyle"
                android:text="@string/quantity_txt_column" />

            <TextView
                android:id="@+id/product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/CategoryStyle"
                android:text=" 30" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/CategoryStyle"
                android:text="@string/price_txt_column"/>

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/CategoryStyle"
                android:text=" 30 $" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/sell_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/button_circle"
        android:focusable="false"
        android:text="@string/sell_button" />
</LinearLayout>